--- a/diseño.html
+++ b/diseño.html
@@ -42,9 +42,6 @@
     </div>
   </header>
 
-
-
-
         <div class="grid-box">
           <div class="grid-container">
             <div class="grid-item"><img src="img/De Maio Logo V3.png" alt="Imagen 1"></div>
@@ -53,14 +50,11 @@
             <div class="grid-item"><img src="img/sello tom negro con letras sin accesorios.png" alt="Imagen 4"></div>
             <div class="grid-item"><img src="img/Webmanager titulo.png" alt="Imagen 5"></div>
             <div class="grid-item"><img src="img/Playa luffy+.jpg" alt="Imagen 6"></div>
-            <div class="grid-item"><img src="image7.jpg" alt="Imagen 7"></div>
-            <div class="grid-item"><img src="image8.jpg" alt="Imagen 8"></div>
-            <div class="grid-item"><img src="image9.jpg" alt="Imagen 9"></div>
+            <div class="grid-item"><img src="img/Foto perfil Instagram.jpg" alt="Imagen 7"></div>
+            <div class="grid-item"><img src="img/LogoRLP Circulo.png" alt="Imagen 8"></div>
+            <div class="grid-item"><video src="img/GXA ANIMACION2023 Final con sonidos.mp4" alt="Imagen 9" width="400px" height="400px" controls> </video> </div>
           </div>
         </div>
-
-
-
 
 <footer>
     <div class="footer-container">
