--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
 
 
 <main>
-  <div id="fotoperfil"></div>
+  <div id="fotoperfil"><img src="img/fotoperfil.jpeg" id="fotoperf"></div>
     <article>
       <section class="article">
         <div class="contenedor-lista">
           <h1 class="tittle">
-            Formación Academica
+            Formación Académica
           </h1>
           <ul class="lista">
             <li class="lista__item">Título Secundario Bachiller en Economía y Administración.
               Instituto Santa Teresita.</li>
-            <li class="lista__item">Diseño proyectual asistido por computadora 2D/3D</li>
-            <li class="lista__item">Inglés</li>
-            <li class="lista__item">Estudiante de INGENIERÍA EN SISTEMAS DE INFORMACIÓ</li>
+            <li class="lista__item">Diseño proyectual asistido por computadora 2D/3D Curso impartido por la UOM</li>
+            <li class="lista__item">Inglés I Curso impartido por la UOM</li>
+            <li class="lista__item">Estudiante de INGENIERÍA EN SISTEMAS DE INFORMACIÓN en la UAI</li>
           </ul>
           <h2  class="tittle">Experiencia Laboral</h2>
           <ul class="lista">
-            <li class="lista__item">Ayudante de Cátedra de la materia "Sistemas y Procesos de Negocio" 
-              Cátedra a cargo de la Dra. María Florencia Pollo - Cattaneo UTN</li>
-            <li class="lista__item">Trabajo Contable en empresa familiar de viajes de choferes, registro de remitos y facturació
-              TRANSPORTES HEINEN
+            <li class="lista__item">Ayudante de Cátedra de la materia "Sistemas y Procesos de Negocio" por 4 años
+              Cátedra a cargo de la Dra. María Florencia Pollo - Cattaneo UTN </li><a href="https://ar.linkedin.com/in/ma-florencia-pollo-cattaneo-7bb16719b?trk=people-guest_people_search-card&original_referer=https%3A%2F%2Fwww.linkedin.com%2F" id="linkref">REFERENCIA</a>
+            <li class="lista__item">Trabajo Contable en empresa familiar de viajes de choferes, registro de remitos y facturación
+              TRANSPORTES HEINEN 
             </li>
             <li class="lista__item">
               Asesoría en Microinformatica en la empresa HIDROPLAST HIDROMASAJES
@@ -74,12 +74,53 @@
             </h3>
             <ul class="lista">
               <li class="lista__item">
-              PAPER presentado ante CONAIISI y públicado
+              Trabajo de campo en PAPER presentado por la cátedra de Sistemas y Organizaciones de la UTN, ante el CONAIISI
               </li>
               <li class="lista__item">
-              Video Juego
+              Video Juego en 2.5D creado en grupo para presentar en la Game JAM.
               </li>
             </ul>
+            <h4 class="tittle">
+              Herramientas de Software Destacadas
+            </h4>
+            <ul class="lista">
+              <li class="lista__item">
+              HTML y CSS, Básico
+              </li>
+              <li class="lista__item">
+              SQL, Básico
+              </li>
+              <li class="lista__item">
+              Photoshop y Sony Vegas, Avanzado
+              </li>
+              <li class="lista__item">
+              AUTOCAD y Blender, Básico
+              </li>
+              <li class="lista__item">
+              Excel, Intermedio
+              </li>
+            </ul>
+            <h5 class="tittle">
+              Otros
+            </h5>
+            <ul class="lista">
+              <li class="lista__item">
+              Reparación y Mantenimiento de computadoras de escritorio
+              </li>
+              <li class="lista__item">
+              Computadora de escritorio y Notebook personal
+              </li>
+              <li class="lista__item">
+              Movilidad propia
+              </li>
+            </ul>
+            <h6 class="tittle">
+              Cualidades para el trabajo
+            </h6>
+        </div>
+        <div class="textcuali">Si tuviera que nombrar cualidades para desempeñarme en un grupo de trabajo destacaría sobre todo la creatividad, pero también 
+        buena predisposición para ayudar a mis compañeros en las tareas grandes como pequeñas, ganas de aprender y mejorar, así como
+        también	fomentar un espacio de trabajo ameno y amigable tanto con mis compañeros como con mis superiores.
         </div>
      </section>
     </article>
@@ -113,7 +154,7 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="programacion.html">PROGRAMACIÓNs</a></li>
           <li><a href="diseño.html">DISEÑO</a></li>
-          <li><a href="otros.html">OTRO</a></li>
+          <li><a href="otros.html">OTROS</a></li>
         </ul>
       </div>
     </div>
