--- a/programacion.html
+++ b/programacion.html
@@ -43,7 +43,7 @@
     </header>
 
 
-    <form class="formulario-contacto" action="correo.php" method="post">
+    <form class="formulario-contacto" action="css/correo.php" method="post">
         <div class="campo-formulario">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombreform" name="nombre" required placeholder="Escribe tu nombre aquí">
