--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="navc"></div>
     <div id="nav">
       <a href="index.html" id="home" class="boton">HOME</a>
-      <a href="programacion.html" id="diseno" class="boton">PROGRAMACIÓN</a>
+      <a href="programacion.php" id="diseno" class="boton">PROGRAMACIÓN</a>
       <a href="diseño.html" id="progr" class="boton">DISEÑO</a>
       <a href="otros.html" id="otros" class="boton">OTROS</a>
     </div>
